src/main/java/com/example/medappointmentscheduler/error/PatientEmailNotFoundException.java
package com.example.medappointmentscheduler.error;

public class PatientEmailNotFoundException extends RuntimeException {
    public PatientEmailNotFoundException(String email) {
        super("Could not find patient with email: " + email);
    }
}
